provision/kubernetes/k3d-prom-hands-on-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.pathmatcher: Path
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: prometheus.k3d.localhost
    http:
      paths:
      - backend:
          service:
            name: prometheus-service
            port:
              number: 9090
        path: /
        pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.pathmatcher: Path
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: alertmanager.k3d.localhost
    http:
      paths:
      - backend:
          service:
            name: alertmanager-service
            port:
              number: 9093
        path: /
        pathType: Prefix
---
